# justjoy

./: .envrc  CMakeLists.txt  README.md  devbox.json  run.sh
include/warpout/: joystick.hpp  server.hpp  slip.h  tlvc.h
src/: client.cpp  joystick.cpp  netstick.cpp  netstickd.cpp  server.cpp  slip.cpp  tlvc.cpp  warpout.cpp
